syntax = "proto3";

package chatbox;

option go_package = "./pb";

import "google/api/annotations.proto";

service ChatBox {
  rpc SendChat(ChatData) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/chat/send"
      body: "*"
    };
  };
  rpc GetChat(Empty) returns (ChatList) {
    option (google.api.http) = {
      get: "/v1/chat/list"
    };
  };
}

message Empty {
}

message ChatData {
  int32 id = 1;
  string name = 2;
  string text = 3;
}

message ChatList {
  repeated ChatData chat_list = 1;
}